erDiagram
  AUTH_USERS ||--|| PROFILES : has
  AUTH_USERS ||--o{ USER_ROLES : assigned
  AUTH_USERS ||--o| STAFF_PROFILES : may_have

  COUNTRIES ||--o{ CONTENT_ITEMS : scopes
  CONTENT_ITEMS ||--o{ CONTENT_TRANSLATIONS : localized
  CONTENT_ITEMS ||--o{ CONTENT_SOURCES : cites
  CONTENT_ITEMS ||--o{ CONTENT_VERSIONS : versions

  COUNTRIES ||--o{ SERVICE_PACKAGES : offers
  SERVICE_PACKAGES ||--o{ PACKAGE_PRICES : priced
  SERVICE_PACKAGES ||--o{ PACKAGE_FEATURES : includes

  COMPARISON_CRITERIA ||--o{ COUNTRY_COMPARISON_SCORES : scores
  COUNTRIES ||--o{ COUNTRY_COMPARISON_SCORES : receives
  ASSESSMENT_QUESTIONS ||--o{ ASSESSMENT_OPTIONS : has
  ASSESSMENT_OPTIONS ||--o{ ASSESSMENT_OPTION_WEIGHTS : weights
  COUNTRIES ||--o{ ASSESSMENT_OPTION_WEIGHTS : target
  ASSESSMENT_SESSIONS ||--o{ ASSESSMENT_ANSWERS : collects
  ASSESSMENT_SESSIONS ||--o{ ASSESSMENT_RESULTS : produces

  CRM_CONTACTS ||--o{ LEADS : has
  LEADS ||--o{ LEAD_ASSIGNMENTS : assigned
  LEADS ||--o{ CRM_ACTIVITIES : tracks
  CRM_CONTACTS ||--o{ INTAKE_SUBMISSIONS : submits

  PROFILES ||--o{ CASES : owns
  CASES ||--o{ CASE_PARTICIPANTS : grants
  AUTH_USERS ||--o{ CASE_PARTICIPANTS : participates
  CASES ||--o{ CASE_TASKS : contains
  CASES ||--o{ CASE_MESSAGES : contains
  CASES ||--o{ CASE_NOTES : contains
  CASES ||--o{ CASE_DOCUMENTS : contains
  CASE_DOCUMENTS ||--o{ DOCUMENT_ACCESS_GRANTS : grants
  CASE_DOCUMENTS ||--o{ DOCUMENT_ACCESS_EVENTS : audits

  AUTH_USERS ||--o{ ORDERS : places
  ORDERS ||--o{ ORDER_ITEMS : includes
  ORDERS ||--o{ PAYMENTS : receives
  PAYMENTS ||--o{ REFUNDS : may_have

  AUTH_USERS ||--o{ APPOINTMENTS : books
  APPOINTMENTS ||--o{ APPOINTMENT_PARTICIPANTS : has
  AUTH_USERS ||--o{ APPOINTMENT_PARTICIPANTS : joins

  COURSES ||--o{ COURSE_MODULES : contains
  COURSE_MODULES ||--o{ COURSE_LESSONS : contains
  AUTH_USERS ||--o{ COURSE_ENROLLMENTS : enrolls
  COURSE_LESSONS ||--o{ LESSON_PROGRESS : tracked

  COMMUNITY_CATEGORIES ||--o{ COMMUNITY_POSTS : groups
  AUTH_USERS ||--o{ COMMUNITY_POSTS : authors
  COMMUNITY_POSTS ||--o{ COMMUNITY_COMMENTS : has
  COMMUNITY_POSTS ||--o{ COMMUNITY_REPORTS : reported

  CONTENT_VERSIONS ||--o{ CONTENT_CHUNKS : indexed
  AUTH_USERS ||--o{ AI_CONVERSATIONS : owns
  AI_CONVERSATIONS ||--o{ AI_MESSAGES : contains
  AI_MESSAGES ||--o{ AI_MESSAGE_CITATIONS : cites
  CONTENT_CHUNKS ||--o{ AI_MESSAGE_CITATIONS : referenced
